# bazel-toolchains-yocto

./: .bazelignore  .bazelrc  .gitattributes  .pre-commit-config.yaml  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.test_complete  WORKSPACE_backup  internal_deps.bzl  test_local_sdk.bzl
.github/workflows/: ci.bazelrc  ci.yaml  release.yaml  workspace_snippet.sh
docs/: BUILD.bazel  defs.md  foreign_cc_integration.md
scripts/: BUILD  post_extract.sh
test_repo/: WORKSPACE
tests/e2e/: .bazelrc  MODULE.bazel  WORKSPACE
tests/e2e/platform/: BUILD
tests/e2e/src/: BUILD.bazel  simple_hello.c  simple_hello.cpp  simple_lib.cpp  simple_lib.hpp
toolchains/: BUILD.bazel  cc_toolchain_config.bzl  defs.bzl  repositories.bzl
toolchains/private/: BUILD.bazel  sdk.bzl
toolchains/private/scripts/: post_extract.sh
toolchains/private/templates/: BUILD.tpl  toolchain_BUILD.tpl  toolchain_cc_config.tpl
toolchains/private/wrappers/: as_wrapper  compiler_wrapper  generic_wrapper  ld_wrapper  real-ld
yocto/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl
yocto/private/: BUILD.bazel  build_templates.bzl  common_utils.bzl  sdk_utils.bzl  toolchain_template.bzl  wrapper_templates.bzl
yocto/tests/: BUILD.bazel  common_utils_test.bzl
